@@ -86,6 +86,7 @@ Please visit http://aegisub.net to download latest version
 - Re-arranged the controls in the subtitle editing area. (AMZ)
 - Right-clicking on the header of the subtitles grid will now bring up a popup menu that allows you to disable columns. (AMZ)
 - Saving back to SRT directly (that is, via "save", not "export" or "save as") is now allowed, as long as no data will be lost. (AMZ)
+- Aegisub now supports file attachments, which are stored decoded (to save memory) and are not part of the undo stack (for the same reason). Previously, they were simply left ignored in the file as unknown lines. (AMZ)
 
 
 = 1.09 beta - 2006.01.16 ===========================
